@@ -94,7 +94,7 @@ public class Pdg_modulo_speseHome extends BulkHome {
             if (pdg_modulo_spese.getCd_cds_area() == null)
                 pdg_modulo_spese.setArea(pdg_modulo_spese.getPdg_modulo_costi().getPdg_modulo().getCdr().getUnita_padre().getUnita_padre());
             pdg_modulo_spese.setPg_dettaglio(
-                    new Integer(((Integer) findAndLockMax(oggettobulk, "pg_dettaglio", new Integer(0))).intValue() + 1));
+                    Integer.valueOf(((Integer) findAndLockMax(oggettobulk, "pg_dettaglio", Integer.valueOf(0))).intValue() + 1));
             super.initializePrimaryKeyForInsert(usercontext, pdg_modulo_spese);
         } catch (it.cnr.jada.bulk.BusyResourceException e) {
             throw new PersistencyException(e);
