@@ -48,10 +48,10 @@ public class ProgettoGestBulk extends ProgettoGestBase {
 	public static final String DURATA_PROGETTO_PLURIENNALE ="P";
 	public static final String DURATA_PROGETTO_ANNUALE 	="A";
 
-	public static final Integer LIVELLO_PROGETTO_PRIMO 	= new Integer(1);
-	public static final Integer LIVELLO_PROGETTO_SECONDO  = new Integer(2);
-	public static final Integer LIVELLO_PROGETTO_TERZO 	= new Integer(3);
-	public static final Integer LIVELLO_PROGETTO_ALL 	= new Integer(4);
+	public static final Integer LIVELLO_PROGETTO_PRIMO 	= Integer.valueOf(1);
+	public static final Integer LIVELLO_PROGETTO_SECONDO  = Integer.valueOf(2);
+	public static final Integer LIVELLO_PROGETTO_TERZO 	= Integer.valueOf(3);
+	public static final Integer LIVELLO_PROGETTO_ALL 	= Integer.valueOf(4);
 
 	private it.cnr.jada.bulk.BulkList	workpackage_collegati = new it.cnr.jada.bulk.BulkList();
 	private it.cnr.jada.bulk.BulkList	workpackage_disponibili  = new it.cnr.jada.bulk.BulkList();
@@ -91,7 +91,7 @@ public class ProgettoGestBulk extends ProgettoGestBase {
 		livello_progettoKeys.put(LIVELLO_PROGETTO_TERZO,"Modulo di Attività");
 		livello_progettoKeys.put(LIVELLO_PROGETTO_ALL,"Sottogruppo");
 		for(int i=4;i<100;i++)
-		  livello_progettoKeys.put(new Integer(i),"Sottogruppo");
+		  livello_progettoKeys.put(Integer.valueOf(i),"Sottogruppo");
 	};
 	private Tipo_progettoBulk tipo;
 	private Unita_organizzativaBulk unita_organizzativa;
